--- a/style.css
+++ b/style.css
@@ -1,49 +1,43 @@
 body {
   background-color: #01171b;
   font-family: "Montserrat", sans-serif;
-  height: 50rem;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
 }
 
 .mapDiv {
   width: 100%;
+  min-height: 650px;
+  margin-top: 100px;
   display: flex;
-  align-items: center;
-  align-content: center;
+  justify-content: space-around;
 }
 
 h1 {
   text-align: center;
   font-size: 45px;
-
   color: beige;
 }
 
 h2 {
   text-align: center;
   font-size: 25px;
-
   color: beige;
 }
 
 h4 {
   text-align: center;
   font-size: 15px;
-
   color: beige;
 }
 svg {
-  width: 100%;
-  height: 90vh;
+  min-width: 40%;
+  min-height: 650px;
   display: flex;
-  align-items: center;
-  align-content: center;
-  margin-left: 33%;
-  margin-right: 25%;
-  margin-top: 100px;
+  justify-content: space-around;
 }
-g {
-  width: 100%;
-}
+
 svg path:hover {
   fill: #006284;
   cursor: pointer;
@@ -58,23 +52,19 @@ svg path:hover {
 }
 
 #information {
-  height: 500px;
-  width: 20%;
-  position: absolute;
-  top: 100px;
+  min-height: 300px;
+  max-width: 40%;
   background-color: beige;
-  border-top-right-radius: 20px;
-  border-bottom-right-radius: 20px;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
   padding-left: 15px;
   padding-right: 15px;
   transition: 1s;
 }
 
 #sastojci {
-  height: 300px;
-  width: 20%;
-  position: absolute;
-  top: 610px;
+  max-width: 40%;
+  min-height: 300px;
   background-color: rgb(203, 203, 180);
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
@@ -83,25 +73,47 @@ svg path:hover {
   transition: 1s;
 }
 
-#displayImageAndVideo {
-  position: absolute;
-  right: 0;
-  width: 30%;
-  height: 300px;
-  top: 150px;
-  right: 10px;
-  transition: 1s;
-}
-
 #image {
   width: 100%;
-  height: 400px;
-  border-radius: 3px;
-  transition: 1s;
-  background-repeat: no-repeat;
-  background-size: cover;
+  height: auto;
+}
+
+#displayImageAndVideo {
+  text-align: center;
+  width: 50%;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-bottom: 50px;
+  margin: 0 auto;
 }
 
 .invisible {
   display: none;
+}
+
+.textArea {
+  display: flex;
+  flex-direction: row;
+  max-width: 100%;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+  min-height: fit-content;
+}
+
+#zupanija {
+  color: black;
+}
+
+#arrow {
+  position: fixed;
+  background-color: aquamarine;
+  text-align: center;
+  padding: 20px;
+  font-size: 25px;
+  border-radius: 15px;
+  margin-right: 35px;
+  margin-bottom: 20px;
+  bottom: 0;
+  right: 0;
 }
