--- a/style.css
+++ b/style.css
@@ -1,9 +1,17 @@
+* {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: #01171b;
   font-family: "Montserrat", sans-serif;
   height: fit-content;
   display: flex;
   flex-direction: column;
+}
+
+a:link {
+  text-decoration: none;
 }
 
 .mapDiv {
@@ -80,7 +88,8 @@ svg path:hover {
 
 #displayImageAndVideo {
   text-align: center;
-  width: 50%;
+  max-width: 50%;
+  max-height: 90%;
   padding-top: 20px;
   padding-bottom: 20px;
   margin-bottom: 50px;
@@ -116,4 +125,47 @@ svg path:hover {
   margin-bottom: 20px;
   bottom: 0;
   right: 0;
+}
+
+#arrow:hover {
+  cursor: pointer;
+  opacity: 0.7;
+}
+
+.animation {
+  -webkit-animation: text-pop-up-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+    both;
+  animation: text-pop-up-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
+@keyframes text-pop-up-top {
+  0% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    -webkit-transform-origin: 50% 50%;
+    transform-origin: 50% 50%;
+    text-shadow: none;
+  }
+  100% {
+    -webkit-transform: translateY(-50px);
+    transform: translateY(-50px);
+    -webkit-transform-origin: 50% 50%;
+    transform-origin: 50% 50%;
+    text-shadow: 0 1px 0 #cccccc, 0 2px 0 #cccccc, 0 3px 0 #cccccc,
+      0 4px 0 #cccccc, 0 5px 0 #cccccc, 0 6px 0 #cccccc, 0 7px 0 #cccccc,
+      0 8px 0 #cccccc, 0 9px 0 #cccccc, 0 50px 30px rgba(0, 0, 0, 0.3);
+  }
+}
+
+@media screen and (max-width: 945px) {
+  .textArea {
+    flex-direction: column;
+  }
+  #information {
+    border-radius: 20px;
+  }
+
+  #sastojci {
+    border-radius: 20px;
+  }
 }
