--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ body {
 
 a:link {
   text-decoration: none;
+  padding: 40px;
+  font-size: 25px;
 }
 
 .mapDiv {
@@ -67,7 +69,6 @@ svg path:hover {
   border-bottom-left-radius: 20px;
   padding-left: 15px;
   padding-right: 15px;
-  transition: 1s;
 }
 
 #sastojci {
@@ -78,7 +79,6 @@ svg path:hover {
   border-bottom-right-radius: 20px;
   padding-left: 15px;
   padding-right: 15px;
-  transition: 1s;
 }
 
 #image {
@@ -118,7 +118,7 @@ svg path:hover {
   position: fixed;
   background-color: aquamarine;
   text-align: center;
-  padding: 20px;
+
   font-size: 25px;
   border-radius: 15px;
   margin-right: 35px;
@@ -130,31 +130,6 @@ svg path:hover {
 #arrow:hover {
   cursor: pointer;
   opacity: 0.7;
-}
-
-.animation {
-  -webkit-animation: text-pop-up-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
-    both;
-  animation: text-pop-up-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-}
-
-@keyframes text-pop-up-top {
-  0% {
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-    -webkit-transform-origin: 50% 50%;
-    transform-origin: 50% 50%;
-    text-shadow: none;
-  }
-  100% {
-    -webkit-transform: translateY(-50px);
-    transform: translateY(-50px);
-    -webkit-transform-origin: 50% 50%;
-    transform-origin: 50% 50%;
-    text-shadow: 0 1px 0 #cccccc, 0 2px 0 #cccccc, 0 3px 0 #cccccc,
-      0 4px 0 #cccccc, 0 5px 0 #cccccc, 0 6px 0 #cccccc, 0 7px 0 #cccccc,
-      0 8px 0 #cccccc, 0 9px 0 #cccccc, 0 50px 30px rgba(0, 0, 0, 0.3);
-  }
 }
 
 @media screen and (max-width: 945px) {
